# fastapi_kubernetes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
helm/: Chart.yaml  kubectl_cheat_sheet.md  manual_commands.md
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
src/fastapi_kubernetes/: app.py  authentication.py  main.py
tests/: kubernetes_actual_api.py  load_test.py  test_api.py  test_default.py
