[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "David Kuchelmeister"}]

dependencies = [
  "uvicorn >= 0.29.0",
  "fastapi >= 0.110.2",
]
dynamic = ["version"]
name = "fastapi_kubernetes"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "setuptools_scm",
  "build",
]

[tool.coverage.run]
source_pkgs = [
  "fastapi_kubernetes",
]

[tool.mypy]
files = "src/fastapi_kubernetes"
ignore_missing_imports = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/fastapi_kubernetes/_version.py"
version_scheme = "python-simplified-semver"
